--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "d3-context-menu",
   "version": "1.0.2",
   "description": "A plugin for d3.js that allows you to easily use context menus in your visualizations.",
-  "main": "js/d3-context-menu.js",
+  "main": "dist/d3-context-menu.js",
+  "module": "src/index.js",
   "directories": {
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dist": "mkdirp dist && uglifyjs js/d3-context-menu.js -o dist/d3-context-menu.min.js -c -m --source-map \"includeSources\" && minify css/d3-context-menu.css > dist/d3-context-menu.min.css"
+    "pretest": "rollup -c",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -26,8 +27,13 @@
   },
   "homepage": "https://github.com/patorjk/d3-context-menu",
   "devDependencies": {
-    "minify": "^3.0.2",
-    "mkdirp": "^0.5.1",
-    "uglify-js": "^3.3.8"
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "rollup": "^1.4.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-uglify": "^6.0.2"
+  },
+  "dependencies": {
+    "d3-selection": "^1.4.0"
   }
 }
