--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "example": "examples"
   },
   "scripts": {
-    "pretest": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c"
   },
   "repository": {
     "type": "git",
